--- a/src/main/style/base.css
+++ b/src/main/style/base.css
@@ -50,9 +50,9 @@
     --discovery-fmt-string-color: #690;
     --discovery-fmt-string-highlight-color: rgba(35, 165, 25, 0.1);
     --discovery-fmt-comment-color: #75787b;
-    --discovery-fmt-qualifier: #dd4a68;
-    --discovery-fmt-entity: #9a6e3a;
-    --discovery-fmt-punctuation: #999;
+    --discovery-fmt-qualifier-color: #dd4a68;
+    --discovery-fmt-entity-color: #9a6e3a;
+    --discovery-fmt-punctuation-color: #999;
     --discovery-fmt-meta-color: #9150c5;
     --discovery-fmt-negative-color: #ec2b2b;
     --discovery-fmt-positive-color: #690;
@@ -91,7 +91,7 @@
     --discovery-fmt-string-underline-color: #85ab51;
     --discovery-fmt-string-hover-color: #97cf26;
     --discovery-fmt-meta-color: #a783c4;
-    --discovery-fmt-negative-color: #fa6464;
+    --discovery-fmt-negative-color: #eb6969;
     --discovery-fmt-positive-color: #7faf20;
 }
 
